2025-Dec-22:
- Hide the GUI until the keybind is triggered.
- Do not make the icon show up in the MacOS taskbar when the GUI is shown.
- Always center the GUI when it appears and make it unmoveable.
- When the GUI is in focus and visible, any click out of focus should hide the application.
- Hide the window controls on the GUI.
- Have the daemon show its active at the top-right of the MacOS.
- daemon: Combine the sanitizer header into the config.h.
- GUI testing with AppleScript.

2025-Dec-21:
- Initialize project
  - Create browser extension for forwarding browser tab events.
  - Create daemon for handling websocket server and controlling the
    application GUI.
- Start prototype GUI SwiftUI (inside app/ dir).
- Using Unix Domain Sockets (UDS) to communicate b/w the daemon and the GUI.
- Using Carbon to register global keybind (Ctrl+Shift+J for now) to trigger program callback.
- Daemon controls the process of the TabManager GUI.

TODO:
- Restrict triggering of global keybind to only browser sessions.
- Use case 1: creation of new task
  - Sketch out workflow of creating a new task and assigning tabs to each task.
- Separate the daemon engine from the OS interactions to make unit-testable.